separate directories example

--- a/demoserver2/Dockerfile
+++ b/demoserver2/Dockerfile
@@ -2,7 +2,7 @@ FROM golang:1.10
 
 WORKDIR /go/src/github.com/windmilleng/tiltdemo/cmd/demoserver2
 
-ADD ./cmd/demoserver2 .
+ADD ./cmd .
 
 RUN go install github.com/windmilleng/tiltdemo/cmd/demoserver2
 
