--- a/demoserver1/Dockerfile
+++ b/demoserver1/Dockerfile
@@ -2,7 +2,7 @@ FROM golang:1.10
 
 WORKDIR /go/src/github.com/windmilleng/tiltdemo/cmd/demoserver1
 
-ADD ./cmd/demoserver1 .
+ADD ./cmd .
 
 RUN go install github.com/windmilleng/tiltdemo/cmd/demoserver1
 
